--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navbar">
             <div class="container">
               <a href="/" class="navbar-brand">TohaDoku Knowledge</a>
-              <a href="#" class="navbar-login">Войти</a>
+              <a href="./pages/login.html" class="navbar-login">Войти</a>
             </div>
         </nav>
     </header>
