--- a/pages/login.html
+++ b/pages/login.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./../../css/reset.css">
-    <link rel="stylesheet" href="./../../css/bootstrap.min.css">
-    <link rel="stylesheet" href="./../../css/main.css">
+    <link rel="stylesheet" href="./../css/reset.css">
+    <link rel="stylesheet" href="./../css/bootstrap.min.css">
+    <link rel="stylesheet" href="./../css/main.css">
 
     <title>TohaDoku - Knowledgebase - Вход</title>
 </head>
@@ -42,7 +42,7 @@
         </div>
     </section>
 
-    <script src="./../../js/bootstrap.bundle.min.js"></script>
-    <script src="./../../js/script.js"></script>
+    <script src="./../js/bootstrap.bundle.min.js"></script>
+    <script src="./../js/script.js"></script>
 </body>
 </html>
