страница категории/подкатегории

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <h2>ЖС</h2>
                             <p>Жабаскрипт</p>
                         </div>
-                        <a href="">Открыть</a>
+                        <a href="./pages/category-page.html">Открыть</a>
                     </div>
                 </div>
 
@@ -51,7 +51,7 @@
                             <h2>ЖС</h2>
                             <p>Жабаскрипт</p>
                         </div>
-                        <a href="">Открыть</a>
+                        <a href="./pages/category-page.html">Открыть</a>
                     </div>
                 </div>
 
@@ -61,7 +61,7 @@
                             <h2>ЖС</h2>
                             <p>Жабаскрипт</p>
                         </div>
-                        <a href="">Открыть</a>
+                        <a href="./pages/category-page.html">Открыть</a>
                     </div>
                 </div>
 
@@ -71,7 +71,7 @@
                             <h2>ЖС</h2>
                             <p>Жабаскрипт</p>
                         </div>
-                        <a href="">Открыть</a>
+                        <a href="./pages/category-page.html">Открыть</a>
                     </div>
                 </div>
 
@@ -81,7 +81,7 @@
                             <h2>ЖС</h2>
                             <p>Жабаскрипт</p>
                         </div>
-                        <a href="">Открыть</a>
+                        <a href="./pages/category-page.html">Открыть</a>
                     </div>
                 </div>
 
@@ -91,7 +91,7 @@
                             <h2>ЖС</h2>
                             <p>Жабаскрипт</p>
                         </div>
-                        <a href="">Открыть</a>
+                        <a href="./pages/category-page.html">Открыть</a>
                     </div>
                 </div>
             </div>
