--- a/index.html
+++ b/index.html
@@ -1,109 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/main.css">
-    <title>TohaDoku - Knowledgebase</title>
+    <title>TohaDokuHub</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <div class="container">
-              <a href="/" class="navbar-brand">TohaDoku Knowledge</a>
-              <a href="./pages/login.html" class="navbar-login">Войти</a>
-            </div>
-        </nav>
-    </header>
-    <section class="main-section">
-        <div class="container">
-            <div class="p-4">
-                <h1>TohaDoku - База знаний</h1>
-                <p>Это моя база знаний, здесь я буду хранить всю ту информацию, котороую ежедневно изучаю, для того чтобы можно было всегда удобно вернуться к тому чего не запомнил.</p>
-            </div>
-            <div class="search-block p-4">
-                <label for="search-input ">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search-heart" viewBox="0 0 16 16">
-                      <path d="M6.5 4.482c1.664-1.673 5.825 1.254 0 5.018-5.825-3.764-1.664-6.69 0-5.018Z"/>
-                      <path d="M13 6.5a6.471 6.471 0 0 1-1.258 3.844c.04.03.078.062.115.098l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1.007 1.007 0 0 1-.1-.115h.002A6.5 6.5 0 1 1 13 6.5ZM6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11Z"/>
+    <header class="header">
+        <span class="flex">
+            <button class="menu">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M4 6H20M4 12H20M4 18H20" stroke="#e6edf3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
-                </label>
-                <input id="search-input" type="text" placeholder="Поиск по базе знаний">
+            </button>
+            <div class="logo">
+                <a class="logo-link" href="/">
+                    <img class="logo-img" src="./img/logo.png" alt="Логотип">
+                    <span>Главная</span>
+                </a>
             </div>
-            <div class="row g-5 pt-5">
-                <div class="col-md-4">
-                    <div class="category-card">
-                        <div>
-                            <h2>ЖС</h2>
-                            <p>Жабаскрипт</p>
-                        </div>
-                        <a href="./pages/category-page.html">Открыть</a>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="category-card">
-                        <div>
-                            <h2>ЖС</h2>
-                            <p>Жабаскрипт</p>
-                        </div>
-                        <a href="./pages/category-page.html">Открыть</a>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="category-card">
-                        <div>
-                            <h2>ЖС</h2>
-                            <p>Жабаскрипт</p>
-                        </div>
-                        <a href="./pages/category-page.html">Открыть</a>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="category-card">
-                        <div>
-                            <h2>ЖС</h2>
-                            <p>Жабаскрипт</p>
-                        </div>
-                        <a href="./pages/category-page.html">Открыть</a>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="category-card">
-                        <div>
-                            <h2>ЖС</h2>
-                            <p>Жабаскрипт</p>
-                        </div>
-                        <a href="./pages/category-page.html">Открыть</a>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="category-card">
-                        <div>
-                            <h2>ЖС</h2>
-                            <p>Жабаскрипт</p>
-                        </div>
-                        <a href="./pages/category-page.html">Открыть</a>
-                    </div>
-                </div>
+        </span>
+        <span class="flex">
+            <div class="input-block">
+                <input class="search-input" type="text" placeholder="Нажмите для поиска">
             </div>
-            
-        </div>
-    </section>
-    <footer class=" d-flex align-items-center">
-        <div class="container">
-            <p>Данная БЗ создана 12.05.2024 при поддержке Хомыча)</p>
-        </div>
-    </footer>
-    <script src="./js/bootstrap.bundle.min.js"></script>
-    <script src="./js/script.js"></script>
+            <img class="avatar" src="./img/avatar.jpeg" alt="">
+        </span>
+    </header>
+
 </body>
 </html>
